[package]
name = "winproclist"
version = "0.1.0"
authors = ["yotio <yotio@yotiosoft.com>"]
description = "A Rust library that utilizes Windows API to retrieve information about processes and threads within the system."
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/yotiosoft/winproclist"
categories = ["Operating systems", "Windows APIs", "API bindings"]
documentation = "https://docs.rs/winproclist"

[dependencies]
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["memoryapi", "processthreadsapi", "errhandlingapi"] }
