[package]
name = "winprocinfo"
version = "0.1.0"
authors = ["yotio <yotio@yotiosoft.com>"]
description = "A Rust library that utilizes Windows API to obtain information about processes and threads in a Windows system."
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/yotiosoft/winprocinfo"
categories = ["os", "os::windows-apis", "api-bindings"]
documentation = "https://docs.rs/winprocinfo"

[dependencies]
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["memoryapi", "processthreadsapi", "errhandlingapi"] }

[lib]
name = "winprocinfo"

[[bin]]
name = "winprocinfo"
